--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
 		<link rel="stylesheet" href="css.css">
   </head>
   <body>
-        <button id="btn">Нажми меня</button>
-		<button >Нажми меня</button>
-		<button>Нажми меня</button>
+        <button id="btn1">Click to remove</button>
+				<button id="btn2">Console.log me</button>
+				<button id="btn3">Alert once</button>
+				<div class="overlay">
+					<button id="btn4">Overlay</button>
+				</div>
 
-    	<a href="https://www.youtube.com/">https://www.youtube.com/</a>
+    	<a href="https://www.youtube.com/">https://www.youtube.com/ - prevent default</a>
 
 		<script src="script.js"></script>
   </body>
